--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: aghq
 Type: Package
 Title: Adaptive Gauss Hermite Quadrature for Bayesian Inference
-Version: 0.4.3
+Version: 0.4.4
+Date: 2024-03-28
 Author: Alex Stringer
 Maintainer: Alex Stringer <alex.stringer@uwaterloo.ca>
 Description: Adaptive Gauss Hermite Quadrature for Bayesian inference.
